--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="style/add.css">
     </head>
     <body>
+        
         <!-- navbar section -->
         <header>
             <nav class="navbar">
@@ -25,7 +26,7 @@
                     <span class="line"></span>
                 </div>
                 <div class="nav-menu hide">
-                    <a href="#">Home</a>
+                    <a href="">Home</a>
                     <a href="./pages/about.html">About us</a>
                     <a href="./pages/service.html">Service</a>
                     <a href="./pages/contact.html">Contact</a>
@@ -52,8 +53,8 @@
             <div class="main-info">
                 <h1 class="text-center first-h">SFP Research</h1>
                 <p class="text-center">Learn-Invest-Earn</p>
-                <h1 class="text-center">SEBI REGISTERED RESEARCH ANALYST</h1>
-                <h6 class="text-center">SEBI REGISTRATION NUMBER - INH000000000</h6>
+                <h1 class="text-center">SEBI REGISTERED RESEARCH ANALYST FIRM</h1>
+                <h6 class="text-center">SEBI REGISTRATION NUMBER - INH000018124</h6>
             </div>
         </div>
         <!-- <div class="home-about">
@@ -68,14 +69,14 @@
                 <p >Welcome to SFP Research, your trusted partner in navigating the complexities of the share market. We are a team of dedicated and experienced research analysts committed to providing you with insightful, data-driven analysis and research reports. We curate our reports with Technical and fundamental Analysis, which will help our customers in best investment related decision making and improve their own Skills.</p>
             <div class="home-about-button">
                 <a class="btn btn-outline-success read-more" href="./pages/about.html" role="button">Read more ...</a>
-                <a class="btn btn-success our-service" href="#" role="button">Our service</a>
+                <a class="btn btn-success our-service" href="./pages/service.html" role="button">Our service</a>
             </div>
             </div>
-            <div class="p-right-one">
-                <!-- <div class="video-container">
+            <div class="video-bg">
+                <div class="video-container">
                     <video id="video" src="./images/Untitled video - Made with Clipchamp (15).mp4" type="video/mp4"></video>
                     <button id="playPauseBtn" class="play">Play</button>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="free-links">
@@ -86,21 +87,21 @@
                         <img src="images/yt-main.svg" alt="" class="home-social-button">
                     </div>
                     <p>Youtube</p>
-                    <a class="btn btn-outline-success" href="#" role="button">subscribe</a>
+                    <a class="btn btn-outline-success" href="https://www.youtube.com/@SFPresearch" role="button">subscribe</a>
                 </div>
                 <div class="yt-logo">
                     <div>
                         <img src="images/wa-main.svg" alt="" class="home-social-button">
                     </div>
                     <p>Whatsapp</p>
-                    <a class="btn btn-outline-success" href="#" role="button">Join</a>
+                    <a class="btn btn-outline-success" href="https://whatsapp.com/channel/0029VajZSyKI1rcrBeKw7f0D" role="button">Join</a>
                 </div>
                 <div class="yt-logo">
                     <div>
                         <img src="images/tel-main.svg" alt="" class="home-social-button">
                     </div>
                     <p>telegram</p>
-                    <a class="btn btn-outline-success" href="#" role="button">Join</a>
+                    <a class="btn btn-outline-success" href="https://t.me/sfpresearch" role="button">Join</a>
                 </div>
             </div>
         </div>
@@ -115,30 +116,35 @@
                 </li>
                 <li>
                     <h4>Email</h4>
-                    <p>sfpresearch24@gmail.com</p>
+                    <p>contact@sfpresearch.in</p>
+                </li>
+                <li>
+                    <h4>Phone</h4>
+                    <p>+91 9461562167</p>
                 </li>
                 <li>
                     <h4>Follow</h4>
                     <div class="footer-media">
                         <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-youtube"></i></a>
-                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href=""><i class="fa-brands fa-telegram"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter"></i></i></a>
+                        <a href="https://www.instagram.com/sfp_research/profilecard/?igsh=OHlpYWpjdGJ1a3Fm"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@SFPresearch"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://whatsapp.com/channel/0029VajZSyKI1rcrBeKw7f0D"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://t.me/sfpresearch"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://x.com/sfpresearch?t=4YNy19-fnwu71mY_pv2XyA&s=09"><i class="fa-brands fa-twitter"></i></a>
                     </div>
                 </li>
             </ul>
             <div>
                 <h4 class="h4-f-nav">Explore</h4>
                 <div class="footer-nav">
-                    <div><a href="#">Home</a></div>
+                    <div><a href="">Home</a></div>
                     <div><a href="./pages/about.html">About us</a></div>
-                    <div><a href="#">Service</a></div>
-                    <div><a href="#">Contact</a></div>
+                    <div><a href="./pages/service.html">Service</a></div>
+                    <div><a href="./pages/contact.html">Contact</a></div>
                     <div><a href="./pages/disclaimer.html">Disclaimer</a></div>
                     <div><a href="./pages/codeofconduct.html">Code of Conduct</a></div>
                     <div><a href="./pages/investorcharter.html">Investor charter</a></div>
+                    <div><a href="./complaintbox.html">Complaint Box</a></div>
                 </div>
             </div>
         </footer>
