--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SFP Research | about us</title>
+        <title>About us | SFP Research</title>
         <link rel="shortcut icon" href="../images/logo.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/navbar.css">
@@ -26,7 +26,7 @@
                 </div>
                 <div class="nav-menu hide">
                     <a href="../index.html">Home</a>
-                    <a href="#">About us</a>
+                    <a href="">About us</a>
                     <a href="./service.html">Service</a>
                     <a href="./contact.html">Contact</a>
                     <div class="to-center">
@@ -50,15 +50,16 @@
         <!-- main section begains here -->
 
         <h1 class="text-center first-p" >SFP Research</h1>
-        <h1 class="text-center">SEBI REGISTERED RESEARCH ANALYST</h1>
-        <h4 class="text-center no-mar-pad">SEBI REGISTRATION NUMBER - INH000000000</h4>
+        <h1 class="text-center">SEBI REGISTERED RESEARCH ANALYST FIRM</h1>
+        <h4 class="text-center no-mar-pad">SEBI REGISTRATION NUMBER - INH000018124</h4>
 
-        <div class="d-flex justify-content-center footer-media">
+        <div class="d-flex justify-content-center footer-top">
             <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-            <a href=""><i class="fa-brands fa-telegram"></i></a>
+            <a href="https://www.instagram.com/sfp_research/profilecard/?igsh=OHlpYWpjdGJ1a3Fm"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@SFPresearch"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://whatsapp.com/channel/0029VajZSyKI1rcrBeKw7f0D"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://t.me/sfpresearch"><i class="fa-brands fa-telegram"></i></a>
+            <a href="https://x.com/sfpresearch?t=4YNy19-fnwu71mY_pv2XyA&s=09"><i class="fa-brands fa-twitter"></i></i></a>
         </div>
 
         <p>Welcome to SFP Research, your trusted partner in navigating the complexities of the share market. We are a team of dedicated and experienced research analysts committed to providing you with insightful, data-driven analysis and research reports. We curate our reports with Technical and fundamental Analysis, which will help our customers in best investment related decision making and improve their own Skills.</p>
@@ -129,30 +130,35 @@
                 </li>
                 <li>
                     <h4>Email</h4>
-                    <p class="footer-p">sfpresearch24@gmail.com</p>
+                    <p class="footer-p">contact@sfpresearch.in</p>
+                </li>
+                <li>
+                    <h4>Phone</h4>
+                    <p class="footer-p">+91 9461562167</p>
                 </li>
                 <li>
                     <h4>Follow</h4>
                     <div class="footer-media">
                         <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-youtube"></i></a>
-                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href=""><i class="fa-brands fa-telegram"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter"></i></i></a>
+                        <a href="https://www.instagram.com/sfp_research/profilecard/?igsh=OHlpYWpjdGJ1a3Fm"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@SFPresearch"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://whatsapp.com/channel/0029VajZSyKI1rcrBeKw7f0D"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://t.me/sfpresearch"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://x.com/sfpresearch?t=4YNy19-fnwu71mY_pv2XyA&s=09"><i class="fa-brands fa-twitter"></i></i></a>
                     </div>
                 </li>
             </ul>
             <div>
                 <h4 class="h4-f-nav">Explore</h4>
                 <div class="footer-nav">
-                    <div><a href="#">Home</a></div>
-                    <div><a href="./pages/about.html">About us</a></div>
-                    <div><a href="#">Service</a></div>
-                    <div><a href="#">Contact</a></div>
-                    <div><a href="./pages/disclaimer.html">Disclaimer</a></div>
-                    <div><a href="./pages/codeofconduct.html">Code of Conduct</a></div>
-                    <div><a href="./pages/investorcharter.html">Investor charter</a></div>
+                    <div><a href="../index.html">Home</a></div>
+                    <div><a href="">About us</a></div>
+                    <div><a href="./service.html">Service</a></div>
+                    <div><a href="./contact.html">Contact</a></div>
+                    <div><a href="./disclaimer.html">Disclaimer</a></div>
+                    <div><a href="./codeofconduct.html">Code of Conduct</a></div>
+                    <div><a href="./investorcharter.html">Investor charter</a></div>
+                    <div><a href="./complaintbox.html">Complaint Box</a></div>
                 </div>
             </div>
         </footer>
