--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SFP Research | contact us</title>
+        <title>Contact us | SFP Research</title>
         <link rel="shortcut icon" href="../images/logo.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/navbar.css">
@@ -49,30 +49,33 @@
         </header>
         <!-- main section begains here -->
 
-        <div class="first-p">
+        <div class="first-p contact-container">
             <h1 class="text-center"><i class="fa-solid fa-phone-flip fa-rotate-90" style="color: #3d8046;"></i></h1>
             <h1 class="text-center">Call</h1>
-            <p class="text-center">+91 1234567890</p>
+            <p class="text-center contact-info">+91 9461562167</p>
         </div>
-        <div>
-            <h1 class="text-center"><i class="fa-solid fa-envelope"></i></i></h1>
+        <div class="contact-container">
+            <h1 class="text-center"><i class="fa-solid fa-envelope"></i></h1>
             <h1 class="text-center">Mail</h1>
-            <p class="text-center">sfpresearch24@gmail.com</p>
+            <p class="text-center contact-info">contact@sfpresearch.in</p>
         </div>
-        <div>
+        <div class="contact-container">
             <h1 class="text-center"><i class="fa-solid fa-location-dot"></i></i></i></h1>
             <h1 class="text-center">Address</h1>
-            <p class="text-center">Shop no 3 and 4, sukhshine complex, SIKAR, <br>
+            <p class="text-center contact-info">Shop no 3 and 4, sukhshine complex, SIKAR, <br>
                 RAJASTHAN 332001</p>
         </div>
 
         <!-- form -->
 
-        <div class="form-container">
+        <div class="form-container"> 
             <h3>Request a Call</h3>
-            <form id="infoForm" action="submit.php" method="post">
+            <form id="infoForm" action="" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
+
+                <label for="phone">Phone:</label>
+                <input type="tel" id="phone" name="phone" required>
                 
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
@@ -94,30 +97,35 @@
                 </li>
                 <li>
                     <h4>Email</h4>
-                    <p class="footer-p">sfpresearch24@gmail.com</p>
+                    <p class="footer-p">contact@sfpresearch.in</p>
+                </li>
+                <li>
+                    <h4>Phone</h4>
+                    <p class="footer-p">+91 9461562167</p>
                 </li>
                 <li>
                     <h4>Follow</h4>
                     <div class="footer-media">
                         <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-youtube"></i></a>
-                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href=""><i class="fa-brands fa-telegram"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter"></i></i></a>
+                        <a href="https://www.instagram.com/sfp_research/profilecard/?igsh=OHlpYWpjdGJ1a3Fm"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@SFPresearch"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://whatsapp.com/channel/0029VajZSyKI1rcrBeKw7f0D"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://t.me/sfpresearch"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://x.com/sfpresearch?t=4YNy19-fnwu71mY_pv2XyA&s=09"><i class="fa-brands fa-twitter"></i></i></a>
                     </div>
                 </li>
             </ul>
             <div>
                 <h4 class="h4-f-nav">Explore</h4>
                 <div class="footer-nav">
-                    <div><a href="#">Home</a></div>
-                    <div><a href="./pages/about.html">About us</a></div>
-                    <div><a href="#">Service</a></div>
-                    <div><a href="#">Contact</a></div>
-                    <div><a href="./pages/disclaimer.html">Disclaimer</a></div>
-                    <div><a href="./pages/codeofconduct.html">Code of Conduct</a></div>
-                    <div><a href="./pages/investorcharter.html">Investor charter</a></div>
+                    <div><a href="../index.html">Home</a></div>
+                    <div><a href="./about.html">About us</a></div>
+                    <div><a href="./service.html">Service</a></div>
+                    <div><a href="./contact.html">Contact</a></div>
+                    <div><a href="./disclaimer.html">Disclaimer</a></div>
+                    <div><a href="./codeofconduct.html">Code of Conduct</a></div>
+                    <div><a href="./investorcharter.html">Investor charter</a></div>
+                    <div><a href="./complaintbox.html">Complaint Box</a></div>
                 </div>
             </div>
         </footer>
