--- a/pages/service.html
+++ b/pages/service.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SFP Research | Services</title>
+        <title>Services | SFP Research</title>
         <link rel="shortcut icon" href="../images/logo.jpg" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/navbar.css">
@@ -49,7 +49,9 @@
         </header>
         <!-- main section begains here -->
 
-        <h1 class="text-center first-p "> Elevate Your Trading with Our Exclusive Swing & Short-Term Trading Channel!</h1>
+        <div class="service-heading">
+            <h1 class="text-center first-p "> Elevate Your Trading with Our Exclusive Swing & Short-Term Trading Channel!</h1>
+        </div>
 
         <p>Step up your trading game with our premium channel, brought to you by a SEBI-registered research analyst firm. Perfect for traders who are serious about swing and short-term strategies, our channel delivers top-tier, actionable insights straight to you.</p>
 
@@ -63,7 +65,7 @@
         
         <!-- 1 month -->
         <div class="sub-card">
-            <div class="card-title">
+            <div class="card-title bg-success">
                 <h3 class="text-center">Swing Trading / Short Term</h3>
                 <h5 class="text-center">Monthly Plan</h5>
             </div>
@@ -74,14 +76,14 @@
                 <li><i class="fa-solid fa-check" style="color: #3d8046;"></i> Flexible Holding Periods: Choose holding periods ranging from 1 day to 30 days, adapting to your trading style.</li>
             </ul>
             <div class="card-pay">
-                <h3 class="price">1000 &#8377; /<small>1 month</small> </h3>
-                <a class="btn btn-success our-service" href="#" role="button">Buy Plan</a>
+                <!-- <h3 class="price">1000 &#8377; /<small>1 month</small> </h3> -->
+                <a class="btn btn-success our-service" href="https://rpy.club/g/WNgqgUh1m3" role="button">Buy Plan</a>
             </div>
         </div>
         <!-- 3 month -->
 
-        <div class="sub-card">
-            <div class="card-title">
+        <!-- <div class="sub-card">
+            <div class="card-title bg-success">
                 <h3 class="text-center">Swing Trading / Short Term</h3>
                 <h5 class="text-center">Quarterly Plan</h5>
             </div>
@@ -95,11 +97,11 @@
                 <h3 class="price">3000 &#8377; /<small>3 month</small> </h3>
                 <a class="btn btn-success our-service" href="#" role="button">Buy Plan</a>
             </div>
-        </div>
+        </div> -->
         <!-- 6 month -->
 
-        <div class="sub-card">
-            <div class="card-title">
+        <!-- <div class="sub-card">
+            <div class="card-title bg-success">
                 <h3 class="text-center">Swing Trading / Short Term</h3>
                 <h5 class="text-center">Half Yearly Plan</h5>
             </div>
@@ -113,11 +115,11 @@
                 <h3 class="price">6000 &#8377; /<small>6 month</small> </h3>
                 <a class="btn btn-success our-service" href="#" role="button">Buy Plan</a>
             </div>
-        </div>
+        </div> -->
         <!-- 12 month -->
 
-        <div class="sub-card">
-            <div class="card-title">
+        <!-- <div class="sub-card">
+            <div class="card-title bg-success">
                 <h3 class="text-center">Swing Trading / Short Term</h3>
                 <h5 class="text-center">Yearly Plan</h5>
             </div>
@@ -131,7 +133,7 @@
                 <h3 class="price">12000 &#8377; /<small>12 month</small> </h3>
                 <a class="btn btn-success our-service" href="#" role="button">Buy Plan</a>
             </div>
-        </div>
+        </div> -->
 
         <p class="text-center first-p">Join our channel to master the market with confidence and precision. Whether you’re looking to refine your strategies or boost your trades, our expert team is here to support you every step of the way.
             <br><br><b>Subscribe Now and Turn Expert Insights into Profitable Action! </b>
@@ -151,30 +153,35 @@
                 </li>
                 <li>
                     <h4>Email</h4>
-                    <p class="footer-p">sfpresearch24@gmail.com</p>
+                    <p class="footer-p">contact@sfpresearch.in</p>
+                </li>
+                <li>
+                    <h4>Phone</h4>
+                    <p class="footer-p">+91 9461562167</p>
                 </li>
                 <li>
                     <h4>Follow</h4>
                     <div class="footer-media">
                         <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-youtube"></i></a>
-                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href=""><i class="fa-brands fa-telegram"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter"></i></i></a>
+                        <a href="https://www.instagram.com/sfp_research/profilecard/?igsh=OHlpYWpjdGJ1a3Fm"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@SFPresearch"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://whatsapp.com/channel/0029VajZSyKI1rcrBeKw7f0D"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://t.me/sfpresearch"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://x.com/sfpresearch?t=4YNy19-fnwu71mY_pv2XyA&s=09"><i class="fa-brands fa-twitter"></i></a>
                     </div>
                 </li>
             </ul>
             <div>
                 <h4 class="h4-f-nav">Explore</h4>
                 <div class="footer-nav">
-                    <div><a href="#">Home</a></div>
+                    <div><a href="../index.html">Home</a></div>
                     <div><a href="./pages/about.html">About us</a></div>
-                    <div><a href="#">Service</a></div>
-                    <div><a href="#">Contact</a></div>
-                    <div><a href="./pages/disclaimer.html">Disclaimer</a></div>
-                    <div><a href="./pages/codeofconduct.html">Code of Conduct</a></div>
-                    <div><a href="./pages/investorcharter.html">Investor charter</a></div>
+                    <div><a href="./service.html">Service</a></div>
+                    <div><a href="./contact.html">Contact</a></div>
+                    <div><a href="./disclaimer.html">Disclaimer</a></div>
+                    <div><a href="./codeofconduct.html">Code of Conduct</a></div>
+                    <div><a href="./investorcharter.html">Investor charter</a></div>
+                    <div><a href="./complaintbox.html">Complaint Box</a></div>
                 </div>
             </div>
         </footer>
